Version 0.9.4 (...)

- Fixed various incorrect docstrings.

---------------------------------------------------------------------------
Version 0.9.3 (24 October, 2009)

- Updated to latest ez_setup.py
- Fixed grizzled.text.hexdump() to honor show_repeats=True in all cases.
- Added pidfile argument to grizzled.os.daemonize(). grizzled.os.spawnd()
  was passing a pidfile argument to daemonize(), but daemonize() didn't
  support it.

---------------------------------------------------------------------------
Version 0.9.2 (26 May, 2009)

- Added grizzled.misc.bitcount(), to calculate the number of 1 bits in a number.
- Modified grizzled.db for Oracle so that get_tables() uses ALL_TABLES,
  not USER_TABLES (suppressing tables with "$" in them). Made similar change
  for get_indexes().
- Moved grizzled.misc.str2bool() to grizzled.text.

---------------------------------------------------------------------------
Version 0.9.1 (5 December, 2008)

- Added missing import of "re" module to grizzled.db.sqlite module.
- Move grizzled/net.py to grizzled/net/__init__.py.
- Added grizzled.net.ftp package and grizzled.net.ftp.parse module, the
  latter containing a Python port of Dan Bernstein's ftpparse function,
  for parsing output from an FTP server's "LIST" command.

---------------------------------------------------------------------------
Version 0.9 (13 November, 2008)

- Added get_rdbms_metadata() function to grizzled.db drivers, to return
  information about the underlying RDBMS.
- Added grizzled.collections.namedtuple() function, which works like Python's
  new 2.6 namedtuple() function. If running under 2.6, the grizzled.collections
  version *is* the 2.6 namedtuple() function.
- Reorganized internals of grizzled.db for easier maintenance. Has no effect
  on the visible API.
- Moved package metadata from setup.py to grizzled/__init__.py, making it
  easier for other packages to use.

---------------------------------------------------------------------------