@@ -5,3 +5,4 @@
 dist
 epydoc
 *.egg-info
+build
